--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- THIS WILL BE MY LEFT BAR -->
         <div class="col-sm-8">
             <p class="style">SCHEDULE</p>
-            <table class="table table-striped">
+            <table class="table table-striped table-bordered bg-info">
               <tr>
                 <th class="datestyle">SUNDAY FEBRUARY 15TH 2015</th>
                 <td class="teamstyle">INDIA VS PAKISTAN</td>
@@ -59,8 +59,14 @@
                 <td class="teamstyle">INDIA VS WEST INDIES</td>
               </tr>
 
-
+              <tr>
+                <th class="datestyle">TUESDAY MARCH 10TH 2015</th>
+                <td class="teamstyle">INDIA VS IRELAND</td>
+              </tr>
             </table>
+
+          <img src="images/indiawin2011.jpg" class="img-responsive center-block" alt="Responsive image"> 
+
         </div>
         <div class="col-sm-4">
 
@@ -113,6 +119,18 @@
                 
               <tr>
                 <td>Ishant Sharma</td>
+              </tr>
+
+                 <tr>
+                <td>Ravi Ashwin</td>
+              </tr>
+
+              <tr>
+                <td>Bhuvneshwar Kumar</td>
+              </tr>
+                
+              <tr>
+                <td>Umesh Yadav</td>
               </tr>
             </table>
 
